--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,6 +1,6 @@
 <div class ='container'>
     <form>
-        <img src="C:\Users\ghgen\profile\src\app\profile.jpg" alt="profile picture">
+        <img src="assets/minhaImagem.png" alt="Imagem de teste">
         <h1>Gustavo Gennari</h1>
         <h2>Sorocaba, Brasil</h2>
         <h3>ADS Student</h3>
