--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,6 +1,6 @@
 <div class ='container'>
     <form>
-        <img src="assets/minhaImagem.png" alt="Imagem de teste">
+        <img src="https://raw.githubusercontent.com/ghgennari/Profile/refs/heads/master/src/app/profile.jpg" alt="Imagem de teste">
         <h1>Gustavo Gennari</h1>
         <h2>Sorocaba, Brasil</h2>
         <h3>ADS Student</h3>
