--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -14,6 +14,11 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 100%;
+    height: auto;
+    width: 100px;
+    display: block;
+    margin: 0 auto;
 
 }
 
